--- a/Request/index.html
+++ b/Request/index.html
@@ -208,7 +208,7 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="../Vendor/com.request.getin.js?v=55"></script>
-<script src="../Vendor/com.mail.login.js"></script>
+<script src="../Vendor/com.mail.login.js?v=55"></script>
 
 
 </html>
