--- a/Response/index.html
+++ b/Response/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Vendor/com.response.config.css">
 
 </head>
-<body>
+<body style="overflow: hidden;">
     
     <div class="AuthPage" style="display:flex;">
 
@@ -60,6 +60,7 @@
 
 </body>
 
-<script src="../Vendor/com.response.config.js"></script>
+<!--<script src="../Vendor/com.response.config.js"></script>-->
+<script src="../Vendor/com.getserverinfo.config.js"></script>
 
 </html>
