--- a/Response/Qr/index.html
+++ b/Response/Qr/index.html
@@ -6,7 +6,7 @@
     <title>DevLabs Passkeys</title>
     <link rel="stylesheet" href="../Fonts/IndexFontsCaviarDreams.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="../Vendor/com.response.config.css">
+    <link rel="stylesheet" href="../../Vendor/com.response.passkey.config.css">
 
 </head>
 <body style="overflow: hidden;">
