--- a/Response/Mail/index.html
+++ b/Response/Mail/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión</title>
-    <link rel="shortcut icon" href="https://helloid.devlabsco.space/assets/images/logo.png" type="image/x-icon">    
-    <link rel="stylesheet" href="../../Fonts/IndexFontsCaviarDreams.css">
-
-    <script>
-
-        const LocationFile = "../../Vendor/com.response.mail.config.css?v="+Math.random();
-        const style = document.createElement('link');
-        style.href = LocationFile;
-        style.type = "text/css";
-        style.rel = "stylesheet";
-
-        document.head.appendChild(style)
-
-    </script>
+    <title>Solicitud de inicio de sesión</title>
+    <link rel="stylesheet" href="../../Vendor/com.response.mail.config.css">
+    <link rel="stylesheet" href="https://static.devlabsco.space/Public/Resources/Fonts/CaviarDreams/IndexFontsCaviarDreams.css">
 
 </head>
-<body>
+<body style="overflow: hidden !important;">
+    <div class="container" style="overflow: hidden !important;">
+        <div class="content">
+            <div class="icon-wrapper">
+                <div class="icon-glow"></div>
+                <div class="icon-background">
+                    <div class="icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <h1 style="font-family:caviarDreamsBold; color:#FFFFFF">Solicitud de inicio de sesión</h1>
+        </div>
+        <div class="LoginInfo">Estás intentando iniciar sesión en @salinxlg utilizando Hello ID Passkeys pulsa el botón Autorizar y escribe el código en el dispositivo donde estás tratando de iniciar sesión si es necesario.</div>
 
-
-    
+        <button class="authorize-btn">Autorizar</button>
+    </div>
 </body>
 </html>
+
