--- a/Response/Mail/index.html
+++ b/Response/Mail/index.html
@@ -6,6 +6,7 @@
     <title>Solicitud de inicio de sesión</title>
     <link rel="stylesheet" href="../../Vendor/com.response.mail.config.css">
     <link rel="stylesheet" href="https://static.devlabsco.space/Public/Resources/Fonts/CaviarDreams/IndexFontsCaviarDreams.css">
+    <link rel="shortcut icon" href="https://helloid.devlabsco.space/assets/images/logo.png" type="image/x-icon">
 
 </head>
 <body style="overflow: hidden !important;">
@@ -23,10 +24,16 @@
             </div>
             <h1 style="font-family:caviarDreamsBold; color:#FFFFFF">Solicitud de inicio de sesión</h1>
         </div>
-        <div class="LoginInfo">Estás intentando iniciar sesión en @salinxlg utilizando Hello ID Passkeys pulsa el botón Autorizar y escribe el código en el dispositivo donde estás tratando de iniciar sesión si es necesario.</div>
+        <div class="LoginInfo"></div>
 
-        <button class="authorize-btn">Autorizar</button>
+
+        <button class="authorize-btn AuthButton">Autorizar</button>
+
     </div>
 </body>
+
+<script src="../../Vendor/com.response.mail.config.js"></script>
+
 </html>
+
 
