--- a/Request/index.html
+++ b/Request/index.html
@@ -39,6 +39,23 @@
 
 <body>
 
+
+    <div class="NotificationsRenderParent">
+
+        <div class="NotificationsRender">
+
+            <p class="NotificationsContent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, repellat?</p>
+
+            <div class="CloseButton">
+
+                <i class="fi fi-rr-cross-small CloseNotification"></i>
+
+            </div>
+
+        </div>
+
+    </div>
+
     <div class="RequestInfo">
 
         <div class="GetUserNameInfo">
@@ -235,12 +252,13 @@
 
 </body>
 
-<script defer src="../Vendor/qrcode.min.js"></script>
-<!--<script defer src="../Vendor/com.request.config.js"></script>-->
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<script src="../Vendor/com.request.getin.js?v=55"></script>
-<script src="../Vendor/com.mail.login.js?v=55"></script>
+    <script defer src="../Vendor/qrcode.min.js"></script>
+    <!--<script defer src="../Vendor/com.request.config.js"></script>-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="../Vendor/com.request.getin.js?v=56"></script>
+    <script src="../Vendor/com.mail.login.js?v=56"></script>
+    <script src="../Vendor/main.request.js"></script>
 
 
 </html>
