--- a/Request/index.html
+++ b/Request/index.html
@@ -89,9 +89,10 @@
                 </p>
 
                 <div class="CreateAccount">Crear Cuenta</div>
+                <div class="ChangeAccount">Cambiar de cuenta</div>
 
             </div>
-            <div class="Sides" style="position:relative;">
+            <div class="Sides" style="position:relative; overflow: hidden;">
 
                 <div class="GetUserNameContainer">
 
@@ -222,17 +223,18 @@
 
     <div class="LogPage">
 
-    <div class="SensePath"> Iniciar Sesión <ion-icon name="chevron-forward-outline"></ion-icon> TaskFlow </div>
+    <div class="SensePath"></div>
     <div class="QR"> <pre class="pre"></pre> </div>
     <t class="TitleScale1">Escanea el código para iniciar sesión</t>
     <p class="DescriptionScale1">Escanea este codigo en un dispositivo donde ya hayas iniciado sesión.</p>
     
-    <p class="Instructions" style="height: 50px;">Presiona tu foto de perfil y haz click en el icono <i class="fi fi-br-key-skeleton-left-right Demo"></i> y pulse en el icono <i class="fi fi-br-plus Demo"></i> de la esquina superior  derecha</p>
-    <p class="Instructions2" style="height: 50px;">Si estás en iPhone puedes acceder a tu panel de control y pulsa en el icono <i class="fi fi-br-qr-scan Demo"></i> luego apunta la cámara al codigo y en caso de ser necesario pulsa <i class="fi fi-brands-apple Demo"></i></p>
+    <p class="Instructions" style="height: 50px;">Ve a la app de Hello ID en tu teléfono, luego haz clic en tu foto de perfil y pulsa en el ícono <i class="fi fi-br-key-skeleton-left-right Demo"></i> y después en el ícono <i class="fi fi-br-plus Demo"></i> de la esquina superior derecha.</p>
+    <p class="Instructions2" style="height: 50px;">Si estás en un iPhone puedes acceder a tu panel de control y pulsar en el icono <i class="fi fi-br-qr-scan Demo"></i> luego apunta la cámara al código QR y pulsa <i class="Demo"> <ion-icon name="compass-outline"></ion-icon> </i> para acceder al navegador e iniciar sesión. </p>
+    <p class="Instructions3">También puedes abrir la app de tu cámara o Google Lens, apuntar al código QR y hacer clic en él cuando aparezca.</p>
 
     <div class="link">¿Necesitas más ayuda?</div>
 
-    <div class="GoToCode">Siguiente</div>
+    <div class="GoToCode BackLogin">Cancelar</div>
 
     </div>
 
@@ -267,16 +269,17 @@
     <div class="TokenInfo" hidden></div>
 
 
+
 </body>
 
-    <script defer src="../Vendor/qrcode.min.js"></script>
+    <script defer src="../Vendor/qrcode.min.js?v=150"></script>
     <!--<script defer src="../Vendor/com.request.config.js"></script>-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="../Vendor/com.request.getin.js?v=56"></script>
-    <script src="../Vendor/com.mail.login.js?v=56"></script>
-    <script src="../Vendor/main.request.js?v=61"></script>
+    <script src="../Vendor/com.request.getin.js?v=150"></script>
+    <script src="../Vendor/com.mail.login.js?v=150"></script>
+    <script src="../Vendor/main.request.js?v=155" defer></script>
+    <script src="../Vendor/com.qr.config.js?v=155" defer></script>
 
 
 </html>
-
