--- a/Response/Qr/index.html
+++ b/Response/Qr/index.html
@@ -2,65 +2,38 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>DevLabs Passkeys</title>
-    <link rel="stylesheet" href="../Fonts/IndexFontsCaviarDreams.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="../../Vendor/com.response.passkey.config.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solicitud de inicio de sesión</title>
+    <link rel="stylesheet" href="../../Vendor/com.response.mail.config.css">
+    <link rel="stylesheet" href="https://static.devlabsco.space/Public/Resources/Fonts/CaviarDreams/IndexFontsCaviarDreams.css">
+    <link rel="shortcut icon" href="https://helloid.devlabsco.space/assets/images/logo.png" type="image/x-icon">
 
 </head>
-<body style="overflow: hidden;">
-    
-    <div class="AuthPage" style="display:flex;">
-
-        <div class="Icon"></div>
-        <t>Solicitud de inicio de sesión</t>
-        <p class="LoginDescriptionToken">Ocurrio un error.</p>
-
-        <div class="AuthButton">Autorizar</div>
-
-    </div>
-
-    <div class="SessionNoLogged" style="display: none;">
-
-        <div class="Icon"></div>
-        <t>Ingresa la contraseña</t>
-        <input type="password" class="GetPassword">
-        <p class="LoginDescriptionTokens LoginDescriptionTokens2">No pudimos obtener tu cuenta en este dispositivo.</p>
-
-        <div class="AuthButtons ">Continuar</div>
-
-    </div>
-
-    <div class="ShowCode" style="display:none">
-
-        <div class="Shown">
-
-            <div class="Icon"></div>
-
-            <t>Verificación de dos Factores</t>
-
-            <div class="ExitCode"> 
-                <p class="ExitCodeVar">0</p>
-                <p class="ExitCodeVar">0</p>
-                <p class="ExitCodeVar">0</p>
-                <p>-</p>
-                <p class="ExitCodeVar">0</p>
-                <p class="ExitCodeVar">0</p>
-                <p class="ExitCodeVar">0</p> 
+<body style="overflow: hidden !important;">
+    <div class="container" style="overflow: hidden !important;">
+        <div class="content">
+            <div class="icon-wrapper">
+                <div class="icon-glow"></div>
+                <div class="icon-background">
+                    <div class="icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+                        </svg>
+                    </div>
+                </div>
             </div>
-
-            <p class="Inst">Pulsa siguiente y escribe este código en el dispositivo de inicio de sesión</p>
-
-            <div class="FinishLogin">Finalizar</div>
-
+            <h1 style="font-family:caviarDreamsBold; color:#FFFFFF">Solicitud de inicio de sesión</h1>
         </div>
+        <div class="LoginInfo"></div>
+
+
+        <button class="authorize-btn AuthButton">Autorizar</button>
 
     </div>
-
 </body>
 
-<!--<script src="../Vendor/com.response.config.js"></script>-->
-<script src="../Vendor/com.getserverinfo.config.js"></script>
+<script src="../../Vendor/com.response.mail.config.js"></script>
 
 </html>
+
+
