--- a/Response/Qr/index.html
+++ b/Response/Qr/index.html
@@ -27,12 +27,12 @@
         <div class="LoginInfo"></div>
 
 
-        <button class="authorize-btn AuthButton">Autorizar</button>
+        <button class="authorize-btn AuthButton" style="background-color: #9b9b9b; cursor:not-allowed;">Autorizar</button>
 
     </div>
 </body>
 
-<script src="../../Vendor/com.response.mail.config.js"></script>
+<script src="../../Vendor/com.response.qr.config.js"></script>
 
 </html>
 
