--- a/Request/index.html
+++ b/Request/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shorthandcss@1.1.1/dist/shorthand.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700,800,900&display=swap" />
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="shortcut icon" href="https://helloid.devlabsco.space/assets/images/logo.png" type="image/x-icon">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
@@ -44,7 +43,7 @@
 
         <div class="NotificationsRender">
 
-            <p class="NotificationsContent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, repellat?</p>
+            <p class="NotificationsContent"></p>
 
             <div class="CloseButton">
 
@@ -223,18 +222,18 @@
 
     <div class="LogPage">
 
-    <div class="SensePath"></div>
-    <div class="QR"> <pre class="pre"></pre> </div>
-    <t class="TitleScale1">Escanea el código para iniciar sesión</t>
-    <p class="DescriptionScale1">Escanea este codigo en un dispositivo donde ya hayas iniciado sesión.</p>
-    
-    <p class="Instructions" style="height: 50px;">Ve a la app de Hello ID en tu teléfono, luego haz clic en tu foto de perfil y pulsa en el ícono <i class="fi fi-br-key-skeleton-left-right Demo"></i> y después en el ícono <i class="fi fi-br-plus Demo"></i> de la esquina superior derecha.</p>
-    <p class="Instructions2" style="height: 50px;">Si estás en un iPhone puedes acceder a tu panel de control y pulsar en el icono <i class="fi fi-br-qr-scan Demo"></i> luego apunta la cámara al código QR y pulsa <i class="Demo"> <ion-icon name="compass-outline"></ion-icon> </i> para acceder al navegador e iniciar sesión. </p>
-    <p class="Instructions3">También puedes abrir la app de tu cámara o Google Lens, apuntar al código QR y hacer clic en él cuando aparezca.</p>
+        <div class="SensePath"></div>
+        <div class="QR"> <pre class="pre"></pre> </div>
+        <t class="TitleScale1">Escanea el código para iniciar sesión</t>
+        <p class="DescriptionScale1">Escanea este codigo en un dispositivo donde ya hayas iniciado sesión.</p>
+        
+        <p class="Instructions" style="height: 50px;">Ve a la app de Hello ID en tu teléfono, luego haz clic en tu foto de perfil y pulsa en el ícono <i class="fi fi-br-key-skeleton-left-right Demo"></i> y después en el ícono <i class="fi fi-br-plus Demo"></i> de la esquina superior derecha.</p>
+        <p class="Instructions2" style="height: 50px;">Si estás en un iPhone puedes acceder a tu panel de control y pulsar en el icono <i class="fi fi-br-qr-scan Demo"></i> luego apunta la cámara al código QR y pulsa <i class="Demo"> <ion-icon name="compass-outline"></ion-icon> </i> para acceder al navegador e iniciar sesión. </p>
+        <p class="Instructions3">También puedes abrir la app de tu cámara o Google Lens, apuntar al código QR y hacer clic en él cuando aparezca.</p>
 
-    <div class="link">¿Necesitas más ayuda?</div>
+        <div class="link">¿Necesitas más ayuda?</div>
 
-    <div class="GoToCode BackLogin">Cancelar</div>
+        <div class="GoToCode BackLogin">Cancelar</div>
 
     </div>
 
@@ -273,13 +272,11 @@
 </body>
 
     <script defer src="../Vendor/qrcode.min.js?v=150"></script>
-    <!--<script defer src="../Vendor/com.request.config.js"></script>-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="../Vendor/com.request.getin.js?v=150"></script>
-    <script src="../Vendor/com.mail.login.js?v=150"></script>
-    <script src="../Vendor/main.request.js?v=155" defer></script>
-    <script src="../Vendor/com.qr.config.js?v=155" defer></script>
-
+    <script src="../Vendor/com.mail.login.js"></script>
+    <script src="../Vendor/main.request.js?" defer></script>
+    <script src="../Vendor/com.qr.config.js" defer></script>
 
 </html>
