--- a/Request/index.html
+++ b/Request/index.html
@@ -187,7 +187,8 @@
 
                     <div class="Text">
                         <p class="DiscInfo">
-                            
+                            Si continúas, Hello ID compartirá tu nombre, tu dirección de correo electrónico, tu preferencia de idioma y tu imagen de perfil con Eonix. 
+                            Consulta la <a href="/politica-privacidad" target="_blank">Política de Privacidad</a> y los <a href="/terminos-condiciones" target="_blank">Términos del Servicio</a> de este servicio.
                         </p>
                       
                     </div>
