--- a/Request/index.html
+++ b/Request/index.html
@@ -186,7 +186,7 @@
                     <p class="TermsTitle"> ¿Hello ID puede compartir datos con Eonix?</p>
 
                     <div class="Text">
-                        <p class="DiscInfo">
+                        <p class="DisclamerInfo">
                             Si continúas, Hello ID compartirá tu nombre, tu dirección de correo electrónico, tu preferencia de idioma y tu imagen de perfil con Eonix. 
                             Consulta la <a href="/politica-privacidad" target="_blank">Política de Privacidad</a> y los <a href="/terminos-condiciones" target="_blank">Términos del Servicio</a> de este servicio.
                         </p>
