--- a/Request/index.html
+++ b/Request/index.html
@@ -79,7 +79,7 @@
 
                 </div>
 
-                <p class="Title">
+                <p class="Title AccTi">
 
                     Escribe tu @
                     <br>
@@ -93,7 +93,7 @@
             </div>
             <div class="Sides" style="position:relative; overflow: hidden;">
 
-                <div class="GetUserNameContainer">
+                <div class="GetUserNameContainer" style="display: none;">
 
                     
                 <div class="ServiceIdentiderPhotoContainer">
@@ -108,6 +108,29 @@
                 <input type="text" class="GetUserNameForLogin" name="GetUserNameForLogin" placeholder="Escribe tu nombre de usuario" autocomplete="off">
 
                 <div class="ConfirmButton">Siguiente</div>
+
+                </div>
+
+                <div class="AccountSelector">
+
+                    <div class="SelectorPreloader">
+
+                        <div class="spinners">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                            <div class="bar3"></div>
+                            <div class="bar4"></div>
+                            <div class="bar5"></div>
+                            <div class="bar6"></div>
+                            <div class="bar7"></div>
+                            <div class="bar8"></div>
+                            <div class="bar9"></div>
+                            <div class="bar10"></div>
+                            <div class="bar11"></div>
+                            <div class="bar12"></div>
+                          </div>
+
+                    </div>
 
                 </div>
 
@@ -275,7 +298,8 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="../Vendor/com.request.getin.js?v=150"></script>
     <script src="../Vendor/com.mail.login.js"></script>
-    <script src="../Vendor/main.request.js?" defer></script>
+    <script src="../Vendor/main.request.js" defer></script>
     <script src="../Vendor/com.qr.config.js" defer></script>
+    <script src="../Vendor/com.accountsrecovery.js?v=5000" defer></script>
 
 </html>
