--- a/Request/index.html
+++ b/Request/index.html
@@ -95,7 +95,8 @@
 
                 <div class="GetUserNameContainer" style="display: none;">
 
-                    
+                <i class="fi fi-br-list ReturnExistAccounts"></i>
+
                 <div class="ServiceIdentiderPhotoContainer">
 
                     <div class="Identifer ServiceIdentifer"></div>
@@ -112,6 +113,8 @@
                 </div>
 
                 <div class="AccountSelector">
+
+                    <i class="fi fi-rr-multiple AddNewAccountButton"></i>
 
                     <div class="SelectorPreloader">
 
