--- a/request/index.html
+++ b/request/index.html
@@ -89,12 +89,14 @@
                 </p>
 
                 <div class="CreateAccount">Crear Cuenta</div>
-                <div class="ChangeAccount">Cambiar de cuenta</div>
 
             </div>
 
 
             <div class="Sides ExpandInResponsive" style="position:relative; overflow: hidden;">
+
+                <i class="fi fi-br-angle-small-left BackPosition2"></i>
+
 
                 <div class="GetUserNameContainer" style="display: none;">
 
@@ -191,6 +193,13 @@
 
                         <i class="fi fi-ss-qr-scan" style="font-size:17px;"></i>                        
                         <p>Código QR o Passkey</p>
+
+                       </div>
+
+                       <div class="Option HideOutResponsiveMode ChangeAccount">
+
+                        <i class="fi fi-rr-replace" style="font-size:17px;"></i>
+                        <p>Cambiar de cuenta</p>
 
                        </div>
 
@@ -317,8 +326,15 @@
     <script src="../Vendor/main.request.js" defer></script>
     <script src="../Vendor/com.qr.config.js" defer></script>
     <script src="../Vendor/com.accountsrecovery.js?v=5000" defer></script>
+    <script src="../Vendor/com.deliveryengine.config.js"></script>
 
 </html>
 
 
 <div class="DevENC"></div>
+
+
+
+
+
+
