Update Reload Version

--- a/request/index.html
+++ b/request/index.html
@@ -101,7 +101,6 @@
                 <div class="GetUserNameContainer" style="display: none;">
 
                 <i class="fi fi-br-list ReturnExistAccounts"></i>
-
                 <div class="ServiceIdentiderPhotoContainer">
 
                     <div class="Identifer ServiceIdentifer"></div>
@@ -120,6 +119,8 @@
                 <div class="AccountSelector">
 
                     <i class="fi fi-rr-multiple AddNewAccountButton"></i>
+                    <i class="fi fi-rr-magic-wand EditAccounsts"></i>
+
 
                     <div class="ServiceIdentiderPhotoContainer">
 
