Update DevLabs For Dexly

--- a/Response/Mail/index.html
+++ b/Response/Mail/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitud de inicio de sesión</title>
     <link rel="stylesheet" href="../../Vendor/com.response.mail.config.css">
-    <link rel="stylesheet" href="https://static.devlabsco.space/Public/Resources/Fonts/CaviarDreams/IndexFontsCaviarDreams.css">
-    <link rel="shortcut icon" href="https://helloid.devlabsco.space/assets/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://static.dexly.space/Public/Resources/Fonts/CaviarDreams/IndexFontsCaviarDreams.css">
+    <link rel="shortcut icon" href="https://helloid.dexly.space/assets/images/logo.png" type="image/x-icon">
 
 </head>
 <body style="overflow: hidden !important;">
